--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   gap:20px;
-  grid-template-columns: (3, 1fr);
+  grid-template-columns: (auto-fill, minmax(200px, 1fr) );
   grid-template-rows: 1fr;
 .}
 
