Add grid-template-columns property

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+/*CSS grid management */
 .container {
   display: grid;
   gap:20px;
-  grid-template-columns: (auto-fill, minmax(200px, 1fr) );
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-template-rows: 1fr;
-.}
+}
 
 .zone {
     cursor:pointer;
